--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,73 @@
 		android:layout_height="match_parent"
 		tools:context="ru.ilapin.hhminiclient.MainActivity">
 
-	<TextView
-			android:id="@+id/connectivityTextView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="?android:attr/progressBarStyleHorizontal"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:indeterminate="true"
+		android:paddingTop="-4dp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toTopOf="@+id/guideline" />
+
+	<android.support.constraint.Guideline
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/guideline"
+		android:orientation="horizontal"
+		app:layout_constraintGuide_begin="4dp" />
+
+	<EditText
+		android:id="@+id/vacancyKeywords"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="8dp"
+		android:layout_marginTop="0dp"
+		android:ems="10"
+		android:inputType="textPersonName"
+		android:text="Vacancy Keywords"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toTopOf="@+id/guideline"
+		tools:ignore="HardcodedText"
+		app:layout_constraintRight_toLeftOf="@+id/clearButton"
+		android:layout_marginRight="0dp"
+		app:layout_constraintBottom_toBottomOf="@+id/searchButton"
+		android:layout_marginBottom="0dp"/>
+
+	<Button
+		android:id="@+id/searchButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/search"
+		android:layout_marginRight="8dp"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="@+id/guideline"
+		android:layout_marginTop="0dp"/>
+
+	<Button
+		android:id="@+id/clearButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/clear"
+		app:layout_constraintTop_toTopOf="@+id/guideline"
+		android:layout_marginTop="0dp"
+		app:layout_constraintRight_toLeftOf="@+id/searchButton"
+		android:layout_marginRight="0dp"/>
+
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/fsItemsList"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginRight="0dp"
+		app:layout_constraintRight_toRightOf="parent"
+		android:layout_marginLeft="0dp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/searchButton"
+		app:layout_constraintBottom_toBottomOf="parent"
+		android:layout_marginTop="0dp"
+		android:layout_marginBottom="0dp" />
 
 </android.support.constraint.ConstraintLayout>
