--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,8 +64,8 @@
 		android:layout_marginRight="0dp"
 		tools:ignore="RtlHardcoded"/>
 
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/vacanciesList"
+	<android.support.v4.widget.SwipeRefreshLayout
+		android:id="@+id/swipeToRefresh"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		android:layout_marginRight="0dp"
@@ -75,6 +75,22 @@
 		app:layout_constraintTop_toBottomOf="@id/searchButton"
 		app:layout_constraintBottom_toBottomOf="parent"
 		android:layout_marginTop="0dp"
-		android:layout_marginBottom="0dp" />
+		android:layout_marginBottom="0dp">
+
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/vacanciesList"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_marginRight="0dp"
+			android:layout_marginLeft="0dp"
+			android:layout_marginTop="0dp"
+			android:layout_marginBottom="0dp"
+			android:scrollbars="vertical"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent" />
+
+	</android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
