--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
 		android:layout_height="match_parent"
 		tools:context="ru.ilapin.hhminiclient.MainActivity">
 
+	<TextView
+		android:id="@+id/emptyListMessage"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent" />
+
 	<ProgressBar
 		android:id="@+id/progressBar"
 		style="?android:attr/progressBarStyleHorizontal"
