--- a/app/src/main/res/layout/fragment_vacancy.xml
+++ b/app/src/main/res/layout/fragment_vacancy.xml
@@ -16,6 +16,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <TextView
+            android:id="@+id/emptyMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
